開発現場でちゃんと使えるRails 4入門（3）
・config/routes.rbの修正
・users#show, edit, update, destroyアクションの作成
・set_userフィルタの設定
・users#new, users#editアクションのビューのリファクタリング

--- a/03/book_library/app/views/users/index.html.erb
+++ b/03/book_library/app/views/users/index.html.erb
@@ -5,15 +5,21 @@
     <tr>
       <th>氏名</th>
       <th>部署</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= link_to user.name, user_path(user) %></td>
         <td><%= user.department %></td>
+        <td><%= link_to '編集', edit_user_path(user) %></td>
+        <td><%= link_to '削除', user_path(user), method: 'DELETE' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to '新規ユーザ登録', new_user_path %>
