開発現場でちゃんと使えるRails 4入門（6）
・コールバックの中止
・Admin::BooksControllerの追加
・flashの追加
・フィルターオブジェクトの追加

--- a/06/book_library/app/views/admin/books/index.html.erb
+++ b/06/book_library/app/views/admin/books/index.html.erb
@@ -4,6 +4,12 @@
   <%= flash[:notice] %>
 </div>
 
+<%= form_for @book, url: admin_path, method: 'post' do |f| %>
+  <%= f.text_field :title %>
+  <%= f.text_field :author %>
+  <%= f.submit %>
+<% end %>
+
 <table>
   <thead>
     <tr>
