開発現場でちゃんと使えるRails 4入門（7）
・ヘルパーメソッドをapp/helpers/application_helper.rbに追加

--- a/07/book_library/app/views/books/show.html.erb
+++ b/07/book_library/app/views/books/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Outline:</strong>
-  <%= @book.outline %>
+  <%= conv_break @book.outline %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
