--- a/07/book_library/app/views/books/edit.html.erb
+++ b/07/book_library/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing book</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: { book: @book } %>
 
 <%= link_to 'Show', @book %> |
 <%= link_to 'Back', books_path %>
