--- a/07/book_library/app/views/books/new.html.erb
+++ b/07/book_library/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New book</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: { book: @book } %>
 
 <%= link_to 'Back', books_path %>
