開発現場でちゃんと使えるRails 4入門（9）
・AuthenticationMailrのメール機能を追加

--- a/09/book_library/app/views/users/new.html.erb
+++ b/09/book_library/app/views/users/new.html.erb
@@ -9,6 +9,10 @@
     <%= f.label :department %><br>
     <%= f.text_field :department %>
   </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
