--- a/09/book_library/app/views/books/index.html.slim
+++ b/09/book_library/app/views/books/index.html.slim
@@ -3,6 +3,11 @@ h1 Listing books
 #flash
   = flash[:notice]
 
+- @query = Query.new
+= form_for @query, url: books_path, method: :get do |f|
+  = f.text_field :keyword
+  = f.submit '検索'
+
 table
   thead
     tr
